unpackaged/main/default/objects/CICO_Vehicle_Spec__c/CICO_Vehicle_Spec__c.object-meta.xml
<CustomObject>
    <description>Check In Check Out</description>
    <label>Vehicles/Inspections</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Chassis No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles/Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>