unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Actual_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Receive_Date__c</fullName>
    <description>Name changed from Actual receive date to Actual Inspection Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Inspection Date</label>
    <type>Date</type>
</CustomField>