unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Car-SUV</fullName>
            </value>
            <value>
                <fullName>Electric-Car</fullName>
            </value>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Mini-Bus</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Tanker</fullName>
            </value>
            <value>
                <fullName>Trailor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>