unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Catalyst_Required__c.field-meta.xml
<CustomField>
    <fullName>Catalyst_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catalyst Required</label>
    <type>Checkbox</type>
</CustomField>