unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Clean_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Clean_Exterior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clean Exterior</label>
    <type>Checkbox</type>
</CustomField>