unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Clean_Interior__c.field-meta.xml
<CustomField>
    <fullName>Clean_Interior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clean Interior</label>
    <type>Checkbox</type>
</CustomField>