unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>