unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Country_of_Make__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Make__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country of Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>