unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Current_Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Chassis_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Chassis No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>