unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>