unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>