unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Fuel_Cap_Key__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cap_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Cap &amp; Key</label>
    <type>Checkbox</type>
</CustomField>