unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Fuel_Card_Account__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Card_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuel Card Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>