unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Fuel_Card_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Card_Limit__c</fullName>
    <label>Fuel Card Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>