unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Fuel_Card_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Card_Supplier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuel Card Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>