unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuel Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>