unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gross</label>
    <length>255</length>
    <type>Text</type>
</CustomField>