unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspected__c.field-meta.xml
<CustomField>
    <fullName>Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspected?</label>
    <type>Checkbox</type>
</CustomField>