unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspection_No__c.field-meta.xml
<CustomField>
    <fullName>Inspection_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>