unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Re-Inspect</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>