unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspector1__c.field-meta.xml
<CustomField>
    <fullName>Inspector1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles/Inspections</relationshipLabel>
    <relationshipName>Vehicles_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>