unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspector3__c.field-meta.xml
<CustomField>
    <fullName>Inspector3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles/Inspections (Inspector 3)</relationshipLabel>
    <relationshipName>Vehicles_Inspections2</relationshipName>
    <type>Lookup</type>
</CustomField>