unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspector_1__c.field-meta.xml
<CustomField>
    <fullName>Inspector_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspector 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>