unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspector_2__c.field-meta.xml
<CustomField>
    <fullName>Inspector_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspector 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>