unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Inspector_3__c.field-meta.xml
<CustomField>
    <fullName>Inspector_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspector 3</label>
    <length>150</length>
    <type>Text</type>
</CustomField>