unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Intimation_ID__c.field-meta.xml
<CustomField>
    <fullName>Intimation_ID__c</fullName>
    <formula>Intimation_Line__r.Intimation_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intimation ID</label>
    <type>Text</type>
</CustomField>