unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Intimation_Line__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Line__c</fullName>
    <label>Intimation Line</label>
    <referenceTo>CICO_Intimation_Line__c</referenceTo>
    <relationshipName>Vehicle_Spec</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>