unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/No_Of_Cylinders__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Cylinders__c</fullName>
    <label>No Of Cylinders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>