unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <label>Penalty ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>