unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Radio__c.field-meta.xml
<CustomField>
    <fullName>Radio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Radio</label>
    <type>Checkbox</type>
</CustomField>