unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Receive_Km__c.field-meta.xml
<CustomField>
    <fullName>Receive_Km__c</fullName>
    <label>Receive Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>