unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Road_Triangle__c.field-meta.xml
<CustomField>
    <fullName>Road_Triangle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Road Triangle</label>
    <type>Checkbox</type>
</CustomField>