unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Safety_Belts__c.field-meta.xml
<CustomField>
    <fullName>Safety_Belts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Belts</label>
    <type>Checkbox</type>
</CustomField>