unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Salik_Account__c.field-meta.xml
<CustomField>
    <fullName>Salik_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salik Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>