unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>