unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Standards__c.field-meta.xml
<CustomField>
    <fullName>Standards__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Standards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>