unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Sup_Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>Sup_Doc_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sup Doc Date</label>
    <type>Date</type>
</CustomField>