unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Sup_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Sup_Doc_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sup Doc No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>