unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Sup_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Sup_Doc_Type__c</fullName>
    <label>Sup Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Number</fullName>
            </value>
            <value>
                <fullName>Delivery Note</fullName>
                <default>true</default>
                <label>Delivery Note</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>