unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Tool_Kit__c.field-meta.xml
<CustomField>
    <fullName>Tool_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tool Kit</label>
    <type>Checkbox</type>
</CustomField>