unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Wheel_Trims__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Trims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheel Caps/Cover</label>
    <type>Checkbox</type>
</CustomField>