unpackaged/main/default/objects/CICO_Vehicle_Spec__c/fields/Year_Model__c.field-meta.xml
<CustomField>
    <fullName>Year_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year Model</label>
    <length>4</length>
    <type>Text</type>
</CustomField>