unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/Actual_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Actual_Receive_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Actual_Receive_Date__c</errorDisplayField>
    <errorMessage>Please enter valid date</errorMessage>
</ValidationRule>