unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/CommentsValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CommentsValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Inspection_Status__c , &#39;Reject&#39;) &amp;&amp;  ISBLANK(Comment__c)</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Comments are required</errorMessage>
</ValidationRule>