unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/Inspection_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspection_Status_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(Inspected__c) &amp;&amp; NOT(ISPICKVAL( Inspection_Status__c , &#39;Pending&#39;))</errorConditionFormula>
    <errorDisplayField>Inspected__c</errorDisplayField>
    <errorMessage>Inspected should be true</errorMessage>
</ValidationRule>