unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/Inspector2Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspector2Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Inspector_2__c)),
NOT(REGEX(Inspector_2__c , &quot;^[0-9.]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Inspector_2__c</errorDisplayField>
    <errorMessage>Enter numbers only</errorMessage>
</ValidationRule>