unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/Inspector3Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspector3Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Inspector_3__c)),
NOT(REGEX(Inspector_3__c , &quot;^[0-9.]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Inspector_3__c</errorDisplayField>
    <errorMessage>Enter numbers only</errorMessage>
</ValidationRule>