unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/Inspector4Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspector4Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Inspector_4__c)),
NOT(REGEX(Inspector_4__c , &quot;^[0-9.]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Inspector_4__c</errorDisplayField>
    <errorMessage>Enter numbers only</errorMessage>
</ValidationRule>