unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/shipped_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>shipped_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Shipped_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Shipped_Date__c</errorDisplayField>
    <errorMessage>Please enter valid date</errorMessage>
</ValidationRule>