unpackaged/main/default/objects/CICO_Vehicle_Spec__c/validationRules/SuppDoc_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SuppDoc_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Sup_Doc_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Sup_Doc_Date__c</errorDisplayField>
    <errorMessage>Please enter valid date</errorMessage>
</ValidationRule>