unpackaged/main/default/objects/CICO_Vehicle_Spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engine_No__c</columns>
    <columns>Intimation_ID__c</columns>
    <columns>Intimation_Line__c</columns>
    <columns>Inspection_Status__c</columns>
    <columns>Inspected__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Inspection_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Intimation_ID__c</field>
        <operation>equals</operation>
        <value>4368</value>
    </filters>
    <label>All</label>
</ListView>